syntax = "proto3";

option java_package = "com.example.grpc";
option java_outer_classname = "StorageProto";

service StoreService {
  rpc Put(PutRequest) returns (PutResponse);
  rpc GetStorageSize(StorageSizeRequest) returns (StorageSizeResponse);
}

message StorageSizeRequest {

}

message StorageSizeResponse {
    int32 port = 1;
    int32 storage_size = 2;     
}

message PutRequest {
    string key = 1;
    string value = 2;
}

message PutResponse {
    string msg = 1;
}



